# agno-architect

./: .gitignore  README.md  agentic_rag.py  hello.py  pyproject.toml
docs/session/: plan.md
src/: main.py
src/agentic_rag/: config.py  document_processing.py  embeddings.py  graph_builder.py  graph_components.py  interfaces.py  llm.py  vector_store.py
