[project]
name = "agno-architect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-openai>=0.3.11",
    "langchain-text-splitters>=0.3.7",
    "langchainhub>=0.1.21",
    "langgraph>=0.3.21",
    "tiktoken>=0.9.0",
]
